# ainfera-pydantic

./: .gitignore  AGENTS.md  README.md  curl-example.sh  pyproject.toml
ainfera_pydantic/: __init__.py  _model.py
examples/: typed_city.py
tests/: test_model_config.py
