[project]
name = "ainfera-pydantic"
version = "0.1.0"
description = "Pydantic AI + Ainfera Routing — typed agents through the gateway."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Ainfera", email = "hizrian@ainfera.ai" }]
keywords = ["ainfera", "pydantic-ai", "ainfera-inference", "ai-routing", "typed-llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Pydantic AI's `OpenAIProvider` + `OpenAIChatModel` (via the OpenAI
    # SDK underneath) is the clean injection point for a custom base_url.
    # Pin the published line — the 2026-05 GA range.
    "pydantic-ai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/ainfera-ai/ainfera-pydantic"
Documentation = "https://ainfera.ai/docs"
Repository = "https://github.com/ainfera-ai/ainfera-pydantic"
Issues = "https://github.com/ainfera-ai/ainfera-pydantic/issues"
"Ainfera platform" = "https://app.ainfera.ai"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ainfera_pydantic"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"
